added some cotranslational paragraphs

--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -175,7 +175,7 @@ By altering the window lengths, and the thresholds SEG can be optimised to searc
 \section{$\alpha$ Helices In Membranes }
 
 \subsection{The Transmembrane Protein Problem}
-
+% Needs references and a figure showing rate of globular proteins and membrane proteins.
 Because of the experimental hindrance, \gls{tmp} biology has been relatively slow to emerge.
 Throughout the 1990s the concept of a \gls{tmh} was simple and fairly assured: they were greasy peptides of around 30{\AA} in length, often bundled together and oriented perpendicularly to the membrane.
 By 2006, crystallography had elucidated more than 60 high-resolution structures.
@@ -311,11 +311,16 @@ There are, broadly speaking, 3 types of translocation; BiP-mediated eukaryotic p
 
 Translocation is when a ribosome translates the~\gls{rna} to a nascent peptide chain which is handed directly or indirectly to insertion machinery which threads the chain through and, in the case of~\gls{tmh}s, releases the~\gls{tmh} into the membrane environment.
 
-\subsection{Post-Translational Translocation in Eukaryotes}
+\subsection{Post-Translational Translocation}
+%Remember to point out differences in pro and eukaryotes.
 
-\subsection{Post-Translational Translocation in Prokaryotes}
+\subsection{Co-Translational Translocation}
+The overwhelming majority of~\gls{tmp}s use the co-translational method of translocation.
+It has long been understood that this method is essentially the ~\gls{srp} recognising and attaching to the nascent peptide chain whilst it is still associated with the ribosome, and the~\gls{srp} then targets the peptide and ribosome to a~\gls{sr} in association with some membrane insertion machinery on the~\gls{er}~\cite{Pool2005, Hessa2005}.
 
-\subsection{Co-Translational Translocation in Prokaryotes}
+Crystal structures showed the \gls{srp} targets the nascent peptide chain for membrane insertion via a GTPase in both the \gls{srp} and \gls{sr}, that is initially associated with the translocon machinery, coming together to form a complex thus bringing the nascent peptide chain in proximity to the translocon~\cite{Shan2005}.
+Mutant studies of\gls{srp}~\cite{Shan2005} revealed key discrete conformational stages.
+These are the specific recognition of signal sequences on cargo proteins, the targetting of the package to the membrane, the handing over of the cargo to the translocation machinery all the while maintaining precise spatial and temporal coordination of each molecular event~\cite{Saraogi2011}.
 
 
 
