--- a/thesis.tex
+++ b/thesis.tex
@@ -52,8 +52,11 @@
 \newacronym{ks}{KS}{Kolmogorov-Smirnov}
 \newacronym{kw}{KW}{Kruskal-Wallis}
 \newacronym{gpcr}{GPCR}{G protein-–coupled receptor}
-\newacronym{htl}{HTL}{holotranslocon}
-\newacronym{rna}{RNA}{ribonucleic acid}
+\newacronym{htl}{HTL}{Holotranslocon}
+\newacronym{rna}{RNA}{Ribonucleic Acid}
+\newacronym{srp}{SRP}{Signal Recognition Particle}
+\newacronym{sr}{SR}{Signal Recognition Particle Receptor}
+
 
 
 \begin{document}
