fixed page numbering issues

--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -236,7 +236,7 @@ The outline that MPs are vital for relaying information and chemistry across the
 \subsection{Lipids of the Membrane}
 
 %At some point the membrane phases should be discussed.
-Similar to the diagram here perhaps: http://popups.ulg.ac.be/1780-4507/index.php?id=6568
+%Similar to the diagram here perhaps: http://popups.ulg.ac.be/1780-4507/index.php?id=6568
 The compartmentalization of cellular biochemistry is arguably one of the most significant events to have occurred in evolution and is certainly one of the fundamental prerequisites for life~\cite{Koshland2002}.
  The proteins that allow life to use this biochemical barrier are perhaps equally important.
 Together, the lipid bilayer and proteins therein allow complex biochemical systems that facilitate life as we know it.
