--- a/chapter_tmcomposition.tex
+++ b/chapter_tmcomposition.tex
@@ -117,9 +117,9 @@ Datasets and programs used in this work can be downloaded from \url{http://mende
 
   \centering
   \captionof{table}[Acidic residues are rarer in TMHs of single-pass proteins than in TMHs of multi-pass proteins]{\textbf{Acidic residues are rarer in TMHs of single-pass proteins than in TMHs of multi-pass proteins}The statistical results when comparing the number of acidic residues in single-pass or multi-pass TMHs within their database-defined limits and excluding any flanks.
-The number of helices per dataset can be found in Table~\ref{table:negativeskewsinglepass} for single-pass TMHs and Table 3 for multi-pass helices.
-$\mu$SP is the average number of the respective residues per helix in TMHs from single-pass proteins, while $\mu$MP is the average number of the respective residues per TMH from multi-pass proteins.
-The Kruskal-Wallis test scores (H statistics) were calculated for the numbers of aspartic acid and glutamic acid residues in each helix from single-pass and the number of aspartic acid and glutamic acid residues in each helix from multi-pass TMHs}
+  The number of helices per dataset can be found in Table~\ref{table:negativeskewsinglepass} for single-pass TMHs and Table 3 for multi-pass helices.
+  $\mu$ SP is the average number of the respective residues per helix in TMHs from single-pass proteins, while $\mu$ MP is the average number of the respective residues per TMH from multi-pass proteins.
+  The Kruskal-Wallis test scores (H statistics) were calculated for the numbers of aspartic acid and glutamic acid residues in each helix from single-pass and the number of aspartic acid and glutamic acid residues in each helix from multi-pass TMHs}
 
     \resizebox{\textwidth}{!}{
     \begin{tabular}{p{5em}rrp{5em}rrp{5em}rrp{5em}}
@@ -179,11 +179,11 @@ Within the \gls{tmh} itself, there are 64 glutamates (0.19\%) and 69 aspartates 
 In both cases, the negatively charged residues represent the ultimate end of the distribution.
 To note, acidic residues are rare even compared to positively charged residues which are about 3--4 times more frequent.
 On a much smaller dataset of single-spanning \gls{tmp}, Nakashima \textit{et al.}
-(51) made similar compositional studies.
+~\cite{Nakashima1992} made similar compositional studies.
 To compare, they found 0.94\% glutamate and 0.94\% aspartate within just the \gls{tmh} region (values very similar to ours from \gls{tmh}s with small flanks; apparently, they used more outwardly defined \gls{tmh} boundaries) but the content of each glutamate and aspartate within the extracellular or cytoplasmic domains is larger by an order of magnitude, between 5.26\% and 9.34\%.
 These latter values tend to be even higher than the average glutamate and aspartate composition throughout the protein database (5--6\%~\cite{Nakashima1992}).
 
-In the case of multi-pass \gls{tmp}s ((Figure~\ref{fig:amino_acid_distribution})), glutamates and aspartates are still very rare in \gls{tmh}s and their $\pm$5 residue flanks (1.94\% and 1.92\% from the total of 377207 in the case of UniHuman respectively, 1.79\% and 1.70\% from the total of 454700 in the case of ExpAll).
+In the case of multi-pass \gls{tmp}s (Figure~\ref{fig:amino_acid_distribution}), glutamates and aspartates are still very rare in \gls{tmh}s and their $\pm$5 residue flanks (1.94\% and 1.92\% from the total of 377207 in the case of UniHuman respectively, 1.79\% and 1.70\% from the total of 454700 in the case of ExpAll).
 Yet, their occurrence is similar to those of histidine and tryptophan and, notably, acidic residues are only about $\sim$1.5 times less frequent than positively charged residues.
 The observation that acidic residues are more suppressed in single-pass \gls{tmh}s compared with the case of multi-pass \gls{tmh}s is statistically significant.
 In Table \ref{table:acidicresiduesarerare}, the acidic residues are counted in the helices (excluding flanking regions) belonging to either multi-pass or single-pass helices.
