--- a/thesis.tex
+++ b/thesis.tex
@@ -16,7 +16,6 @@
 
 \usepackage{graphicx} %use [!ht] (which means ignore sensible protocols and place here) not [h] (which means place here-ish) for figures otherwise they end up at the end of the chapter.
 \usepackage{amsmath}
-
 \usepackage{csquotes}
 \usepackage{longtable}
 \usepackage[font=footnotesize,labelfont=bf,justification=justified,format=plain,up,textfont=up]{caption} %\usepackage{tabularx}
@@ -140,7 +139,7 @@ I would like to thank all members of both the Eisenhaber research group, as well
 
 
 
-
+\pagenumbering{arabic}
 
 %This is where we call the chapters. No need to include ".tex". The chapters will be printed to the document in this order. To create a new chapter, make a new file, and add the name of the file below (without the file extension).
 \input{chapter_introduction}
