TA references added and acronyms fixed.

--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -311,8 +311,7 @@ There are, broadly speaking, 3 types of translocation; BiP-mediated eukaryotic p
 
 Translocation is when a ribosome translates the~\gls{rna} to a nascent peptide chain which is handed directly or indirectly to insertion machinery which threads the chain through and, in the case of~\gls{tmh}s, releases the~\gls{tmh} into the membrane environment.
 
-\subsection{Post-Translational Translocation}
-%Remember to point out differences in pro and eukaryotes.
+
 
 \subsection{Co-Translational Translocation}
 The overwhelming majority of~\gls{tmp}s use the co-translational method of translocation.
@@ -323,17 +322,23 @@ Mutant studies of\gls{srp}~\cite{Shan2005} revealed key discrete conformational 
 These are the specific recognition of signal sequences on cargo proteins, the targetting of the package to the membrane, the handing over of the cargo to the translocation machinery all the while maintaining precise spatial and temporal coordination of each molecular event~\cite{Saraogi2011}.
 
 
-
+\subsection{Post-Translational Translocation}
+%Remember to point out differences in pro and eukaryotes.
 
 \subsubsection{Tail-Anchored Proteins Post-Translationally Insert}
 
 Tail-anchored proteins are a topologically distinct class of intracellular proteins defined by their single carboxy-terminal transmembrane domain with a cytosolic-facing amino-terminus.
+%Need a figure here of a crystal structure TA.
+
 Tail-anchored proteins are involved in a range of key cellular functions including protein translocation and apoptosis.
 Additionally, within the tail-anchored class of proteins are a set of vesicle fusion proteins called \gls{snare} proteins.
 There is biomedical interest in \gls{snare} drug delivery mechanisms.
-\gls{snare}s can fuse liposomes containing various drug payloads into the membrane.
 
-Notably, known \gls{snare} \gls{tmh}s are highly hydrophobic even compared to other tail anchored \gls{tmh}s.
+\gls{snare}s can fuse liposomes containing various drug payloads into the membrane.
+Notably, known \gls{snare} \gls{tmh}s are highly hydrophobic even compared to other tail anchored \gls{tmh}s~\cite{Kalbfleisch2007}.
+This hydrophobicity appears to be a determinate factor in the precise delivery mechanistic route that a~\gls{ta} proteins use for insertion~\cite{Rabu2008, Rabu2009}, for which there is evidence demonstrating that are several mechanisms~\cite{Rabu2009, Johnson2013}.
+
+Whilst most eukaryotic~\gls{ta} proteins are inserted into the~\cite{er}.
 
 \subsection{Translocon Independent Membrane Insertion}
 %move on to case studies involving spontaneous insertion?
