--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,77 @@
-@article{Hessa2005a,
+@article{Rabu2008,
+abstract = {Tail-anchored (TA) protein synthesis at the endoplasmic reticulum (ER) represents a distinct and novel process that provides a paradigm for understanding post-translational membrane insertion in eukaryotes. The major route for delivering TA proteins to the ER requires both ATP and one or more cytosolic factors that facilitate efficient membrane insertion. Until recently, the identity of these cytosolic components was elusive, but two candidates have now been suggested to promote ATP-dependent TA protein integration. The first is the cytosolic chaperone complex of Hsp40/Hsc70, and the second is a novel ATPase denoted Asna-1 or TRC40. In this study we focus on the role of the Hsp40/Hsc70 complex in promoting TA protein biogenesis at the ER. We show that the membrane integration of most TA proteins is stimulated by Hsp40/Hsc70 when using purified components and a reconstituted system. In contrast, when both Hsp40/Hsc70 and Asna-1/TRC40 are provided as a complete system, small molecule inhibition of Hsp40/Hsc70 indicates that only a subset of TA proteins are obligatory clients for this chaperone-mediated delivery route. We show that the hydrophobicity of the TA region dictates whether a precursor is delivered to the ER via the Hsp40/Hsc70 or Asna-1/TRC40-dependent route, and we conclude that these distinct cytosolic ATPases are responsible for two different ATP-dependent pathways of TA protein biogenesis.},
+author = {Rabu, Catherine and Wipf, Peter and Brodsky, Jeffrey L. and High, Stephen},
+doi = {10.1074/jbc.M804591200},
+file = {::},
+isbn = {0021-9258 (Print)$\backslash$r0021-9258 (Linking)},
+issn = {00219258},
+journal = {Journal of Biological Chemistry},
+month = {oct},
+number = {41},
+pages = {27504--27513},
+pmid = {18667436},
+publisher = {American Society for Biochemistry and Molecular Biology},
+title = {{A precursor-specific role for Hsp40/Hsc70 during tail-anchored protein integration at the endoplasmic reticulum}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/18667436 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC2562055},
+volume = {283},
+year = {2008}
+}
+@article{Rabu2009,
+abstract = {Tail-anchored proteins are a distinct class of integral membrane proteins located in several eukaryotic organelles, where they perform a diverse range of functions. These proteins have in common the C-terminal location of their transmembrane anchor and the resulting post-translational nature of their membrane insertion, which, unlike the co-translational membrane insertion of most other proteins, is not coupled to ongoing protein synthesis. The study of tail-anchored proteins has provided a paradigm for understanding the components and pathways that mediate post-translational biogenesis of membrane proteins at the endoplasmic reticulum. In this Commentary, we review recent studies that have converged at a consensus regarding the molecular mechanisms that underlie this process--namely, that multiple pathways underlie the biogenesis of tail-anchored proteins at the endoplasmic reticulum.},
+author = {Rabu, C. and Schmid, V. and Schwappach, B. and High, S.},
+doi = {10.1242/jcs.041210},
+file = {::},
+isbn = {1477-9137 (Electronic)$\backslash$r0021-9533 (Linking)},
+issn = {0021-9533},
+journal = {Journal of Cell Science},
+number = {20},
+pages = {3605--3612},
+pmid = {19812306},
+title = {{Biogenesis of tail-anchored proteins: the beginning for the end?}},
+url = {http://jcs.biologists.org/cgi/doi/10.1242/jcs.041210},
+volume = {122},
+year = {2009}
+}
+@article{Johnson2013,
+abstract = {Proteins destined for the endomembrane system of eukaryotic cells are typically translocated into or across the membrane of the endoplasmic reticulum and this process is normally closely coupled to protein synthesis. However, it is becoming increasingly apparent that a significant proportion of proteins are targeted to and inserted into the ER membrane post-translationally, that is after their synthesis is complete. These proteins must be efficiently captured and delivered to the target membrane, and indeed a failure to do so may even disrupt proteostasis resulting in cellular dysfunction and disease. In this review, we discuss the mechanisms by which various protein precursors can be targeted to the ER and either inserted into or translocated across the membrane post-translationally. This article is part of a Special Issue entitled: Functional and structural diversity of endoplasmic reticulum. {\textcopyright} 2012 Elsevier B.V.},
+author = {Johnson, Nicholas and Powis, Katie and High, Stephen},
+doi = {10.1016/j.bbamcr.2012.12.008},
+file = {::},
+isbn = {0167-4889},
+issn = {01674889},
+journal = {Biochimica et Biophysica Acta - Molecular Cell Research},
+keywords = {Asna 1,Get3,Short secretory protein,TRC40,Tail-anchored protein},
+month = {nov},
+number = {11},
+pages = {2403--2409},
+pmid = {23266354},
+publisher = {Elsevier},
+title = {{Post-translational translocation into the endoplasmic reticulum}},
+url = {https://www.sciencedirect.com/science/article/pii/S0167488912003862},
+volume = {1833},
+year = {2013}
+}
+@article{Wu2011,
+abstract = {The new field of metagenomics studies microorganism communities by culture-independent sequencing. With the advances in next-generation sequencing techniques, researchers are facing tremendous challenges in metagenomic data analysis due to huge quantity and high complexity of sequence data. Analyzing large datasets is extremely time-consuming; also metagenomic annotation involves a wide range of computational tools, which are difficult to be installed and maintained by common users. The tools provided by the few available web servers are also limited and have various constraints such as login requirement, long waiting time, inability to configure pipelines etc. We developed WebMGA, a customizable web server for fast metagenomic analysis. WebMGA includes over 20 commonly used tools such as ORF calling, sequence clustering, quality control of raw reads, removal of sequencing artifacts and contaminations, taxonomic analysis, functional annotation etc. WebMGA provides users with rapid metagenomic data analysis using fast and effective tools, which have been implemented to run in parallel on our local computer cluster. Users can access WebMGA through web browsers or programming scripts to perform individual analysis or to configure and run customized pipelines. WebMGA is freely available at
+                    http://weizhongli-lab.org/metagenomic-analysis
+
+                  . WebMGA offers to researchers many fast and unique tools and great flexibility for complex metagenomic data analysis.},
+author = {Wu, Sitao and Zhu, Zhengwei and Fu, Liming and Niu, Beifang and Li, Weizhong},
+doi = {10.1186/1471-2164-12-444},
+file = {::},
+issn = {1471-2164},
+journal = {BMC Genomics},
+keywords = {Animal Genetics and Genomics,Life Sciences,Microarrays,Microbial Genetics and Genomics,Plant Genetics {\&} Genomics,Proteomics,general},
+month = {dec},
+number = {1},
+pages = {444},
+publisher = {BioMed Central},
+title = {{WebMGA: a customizable web server for fast metagenomic sequence analysis}},
+url = {http://bmcgenomics.biomedcentral.com/articles/10.1186/1471-2164-12-444},
+volume = {12},
+year = {2011}
+}
+@article{Hessa2005,
 abstract = {The structure of the KvAP voltage-dependent Kþ channel shows two distinct features: the voltage-sensor domains and the central pore domain (1). The critical element in the sensor domains in virtually all voltagegated ion channels is the S4 helix, which contains four or more regularly spaced Arg residues interspersed with hydrophobic residues. Voltage activation has been suggested to involve paddles, each composed of a mildly hydrophobic S3 helix packed against a highly charged S4 helix, that move through the lipid bilayer in response to membrane depolarization (2). This controversial mechanism of gating is at odds with models that envisage the S4 segment as isolated from the lipid bilayer in canaliculi within the channel protein. At the heart of the controversy is the idea that the paddle model is implausible, because of the energetic cost of burying charges in a lipid bilayer (3).},
 author = {Hessa, Tara and White, Stephen H. and {Von Heijne}, Gunnar},
 doi = {10.1126/science.1109176},
@@ -1425,7 +1498,7 @@ file = {::},
 journal = {Proceedings of the National Academy of Sciences of the United States of America},
 number = {87},
 pages = {8940--8944},
-title = {{Cloning and Characterization of a Drosophila Serotonin Receptor that Activates Adenylate Cloning and characterization of a Drosophila serotonin receptor that activates adenylate cyclase (guanine nucleotide-binding protein/5HTlA receptor/cyclic AMP/glycosaminoglycan/circadian rhythm)}},
+title = {{Cloning and Characterization of a Drosophila Serotonin Receptor that Activates Adenylate Cloning and characterization of a Drosophila serotonin receptor that activates adenylate cyclase (guanine nucleotide-binding protein/5HTlA receptor/cyclic AMP/glycosa}},
 url = {http://www.jstor.org/stable/2355663 http://about.jstor.org/terms},
 volume = {87},
 year = {1990}
