--- a/references.bib
+++ b/references.bib
@@ -16,6 +16,29 @@ url = {http://www.ncbi.nlm.nih.gov/pubmed/18667436 http://www.pubmedcentral.nih.
 volume = {283},
 year = {2008}
 }
+@article{Wu2011,
+abstract = {BACKGROUND: The new field of metagenomics studies microorganism communities by culture-independent sequencing. With the advances in next-generation sequencing techniques, researchers are facing tremendous challenges in metagenomic data analysis due to huge quantity and high complexity of sequence data. Analyzing large datasets is extremely time-consuming; also metagenomic annotation involves a wide range of computational tools, which are difficult to be installed and maintained by common users. The tools provided by the few available web servers are also limited and have various constraints such as login requirement, long waiting time, inability to configure pipelines etc.$\backslash$n$\backslash$nRESULTS: We developed WebMGA, a customizable web server for fast metagenomic analysis. WebMGA includes over 20 commonly used tools such as ORF calling, sequence clustering, quality control of raw reads, removal of sequencing artifacts and contaminations, taxonomic analysis, functional annotation etc. WebMGA provides users with rapid metagenomic data analysis using fast and effective tools, which have been implemented to run in parallel on our local computer cluster. Users can access WebMGA through web browsers or programming scripts to perform individual analysis or to configure and run customized pipelines. WebMGA is freely available at http://weizhongli-lab.org/metagenomic-analysis.$\backslash$n$\backslash$nCONCLUSIONS: WebMGA offers to researchers many fast and unique tools and great flexibility for complex metagenomic data analysis.},
+archivePrefix = {arXiv},
+arxivId = {arXiv:1011.1669v3},
+author = {Wu, Sitao and Zhu, Zhengwei and Fu, Liming and Niu, Beifang and Li, Weizhong},
+doi = {10.1186/1471-2164-12-444},
+eprint = {arXiv:1011.1669v3},
+file = {::},
+isbn = {ISSN{\~{}}{\~{}}1471-2164},
+issn = {14712164},
+journal = {BMC Genomics},
+keywords = {Animal Genetics and Genomics,Life Sciences,Microarrays,Microbial Genetics and Genomics,Plant Genetics {\&} Genomics,Proteomics,general},
+month = {dec},
+number = {1},
+pages = {444},
+pmid = {21899761},
+publisher = {BioMed Central},
+title = {{WebMGA: A customizable web server for fast metagenomic sequence analysis}},
+url = {http://bmcgenomics.biomedcentral.com/articles/10.1186/1471-2164-12-444},
+volume = {12},
+year = {2011}
+}
+
 @article{Rabu2009,
 abstract = {Tail-anchored proteins are a distinct class of integral membrane proteins located in several eukaryotic organelles, where they perform a diverse range of functions. These proteins have in common the C-terminal location of their transmembrane anchor and the resulting post-translational nature of their membrane insertion, which, unlike the co-translational membrane insertion of most other proteins, is not coupled to ongoing protein synthesis. The study of tail-anchored proteins has provided a paradigm for understanding the components and pathways that mediate post-translational biogenesis of membrane proteins at the endoplasmic reticulum. In this Commentary, we review recent studies that have converged at a consensus regarding the molecular mechanisms that underlie this process--namely, that multiple pathways underlie the biogenesis of tail-anchored proteins at the endoplasmic reticulum.},
 author = {Rabu, C. and Schmid, V. and Schwappach, B. and High, S.},
